# origin

./: .gitignore  cppm-homeworks_02_03.cpp
02/01/: cppm-homeworks_02_01.cpp
02/02/: cppm-homeworks_02_02.cpp
03/01/cppm-homeworks_03_01/: cppm-homeworks_03_01.sln
03/01/cppm-homeworks_03_01/cppm-homeworks_03_01/: cppm-homeworks_03_01.cpp  cppm-homeworks_03_01.vcxproj  cppm-homeworks_03_01.vcxproj.filters
03/02/cppm-homeworks_03_02/: cppm-homeworks_03_02.sln
03/02/cppm-homeworks_03_02/cppm-homeworks_03_02/: cppm-homeworks_03_02.cpp  cppm-homeworks_03_02.vcxproj  cppm-homeworks_03_02.vcxproj.filters
04/01/cppm-homeworks_04_01/: cppm-homeworks_04_01.sln
04/01/cppm-homeworks_04_01/cppm-homeworks_04_01/: cppm-homeworks_04_01.cpp  cppm-homeworks_04_01.vcxproj  cppm-homeworks_04_01.vcxproj.filters
04/02/cppm-homeworks_04_02/: cppm-homeworks_04_02.sln
04/02/cppm-homeworks_04_02/cppm-homeworks_04_02/: cppm-homeworks_04_02.cpp  cppm-homeworks_04_02.vcxproj  cppm-homeworks_04_02.vcxproj.filters
05/01/cppm-homeworks_05_01/: cppm-homeworks_05_01.sln
05/01/cppm-homeworks_05_01/cppm-homeworks_05_01/: cppm-homeworks_05_01.cpp  cppm-homeworks_05_01.vcxproj  (+1 more)
05/02/cppm-homeworks_05_02/: cppm-homeworks_05_02.sln
05/03/cppm-homeworks_05_03/: cppm-homeworks_05_03.sln
06/01/cppm-homeworks_06_01/: cppm-homeworks_06_01.sln
06/02/cppm-homeworks_06_02/: cppm-homeworks_06_02.sln
06/03/cppm-homeworks_06_03/: cppm-homeworks_06_03.sln
07/01/cppm-homeworks_07_01/: cppm-homeworks_07_01.sln
07/02/cppm-homeworks_07_02/: cppm-homeworks_07_02.sln
08/01/cppm-homeworks_08_01/: cppm-homeworks_08_01.sln
08/02/cppm-homeworks_08_02/: cppm-homeworks_08_02.sln
09/01/cppm-homeworks_09_01/: cppm-homeworks_09_01.sln
09/02/cppm-homeworks_09_02/: cppm-homeworks_09_02.sln
10/01/cppm-homeworks_10_01/: CMakeLists.txt  cppm-homeworks_10_01.cpp
10/02/cppm-homeworks_10_02/: CMakeLists.txt  EquilateralTriangle.cpp  Figure.h  Quadrangle.cpp  RectangularTriangle.cpp  RectangularTriangle.h  Rhomb.cpp  Rhomb.h  Triangle.cpp  cppm-homeworks_10_02.cpp
11/01/cppm-homeworks_11_01/: cppm-homeworks_11_01.sln
11/02/cppm-homeworks_11_02/: cppm-homeworks_11_02.sln
11/03/cppm-homeworks_11_03/: CMakeLists.txt  Leaver.cpp  Leaver.h  cppm-homeworks_11_03_client.cpp
11/04/cppm-homeworks_11_04/: cppm-homeworks_11_04.sln
11/05/cppm-homeworks_11_05/: CMakeLists.txt  EquilateralTriangle.h  Rectangle.cpp  Rectangle.h  cppm-homeworks_11_05_client.cpp
algocpp/02/algocpp02/: algocpp02.sln
algocpp/03/algocpp03_01/: algocpp03_01.sln
algocpp/03/algocpp03_02/: algocpp03_02.sln
algocpp/03_/algocpp03_01/: algocpp03_01.sln
algocpp/03_/algocpp03_02/: algocpp03_02.sln
algocpp/03_/algocpp03_03/: algocpp03_03.sln
algocpp/04/algocpp04_01/: algocpp04_01.sln
algocpp/04/algocpp04_02/: algocpp04_02.sln
algocpp/04/algocpp04_03/: algocpp04_03.sln
algocpp/05/algocpp05_01/: algocpp05_01.sln
algocpp/05/algocpp05_02/: algocpp05_02.sln
algocpp/06/algocpp06_01/: algocpp06_01.sln
algocpp/06/algocpp06_02/: algocpp06_02.sln
algocpp/06/algocpp06_03/: algocpp06_03.sln
algocpp/07/algocpp07_01/: algocpp07_01.sln
algocpp/07/algocpp07_02/: algocpp07_02.sln
algocpp/07/algocpp07_03/: algocpp07_03.sln
algocpp/07/algocpp07_04/: algocpp07_04.sln
algocpp/08/algocpp08_01/: algocpp08_01.sln
algocpp/08/algocpp08_02/: algocpp08_02.sln
cppl-homeworks/03/cppl03_01/: CMakeLists.txt  cppl03_01.cpp
cppl-homeworks/03/cppl03_02/: CMakeLists.txt  cppl03_02.cpp
cppl-homeworks/04/cppl04_01/: CMakeLists.txt  cppl04_01.cpp  list.h
cppl-homeworks/04/cppl04_02/: CMakeLists.txt  cppl04_02.cpp
cppl-homeworks/05/cppl05_01/: CMakeLists.txt  cppl05_01.cpp
cppl-homeworks/05/cppl05_02/: CMakeLists.txt  cppl05_02.cpp
cppl-homeworks/05/cppl05_03/: CMakeLists.txt  cppl05_03.cpp
cppl-homeworks/07/cppl07_01/: cppl07_01.sln
cppl-homeworks/07/cppl07_02/: cppl07_02.sln
cppl-homeworks/07/cppl07_03/: cppl07_03.sln
cppl-homeworks/08/cppl08_01/: cppl08_01.sln
cppl-homeworks/08/cppl08_02/: cppl08_02.sln
cppl-homeworks/10/cppl10_01/: cppl10_01.sln
cppl-homeworks/10/cppl10_02/: cppl10_02.sln
cppl-homeworks/10/cppl10_03/: cppl10_03.sln
cppl-homeworks/11/cppl11_01/: cppl11_01.sln
cppl-homeworks/11/cppl11_02/: cppl11_02.sln
cppl-homeworks/cppl02_01/: CMakeLists.txt  cppl02_01.cpp
dpcpp/01/01/: CMakeLists.txt  main.cpp  sql_query_builder.h
dpcpp/01/02/: CMakeLists.txt  main.cpp  sql_query_builder.h
dpcpp/01/03/: CMakeLists.txt  main.cpp  sql_query_builder.h
dpcpp/02/01/: CMakeLists.txt  decorated_text.h  main.cpp
dpcpp/02/02/: CMakeLists.txt  main.cpp  very_heavy_database.h
dpcpp/03/01/: CMakeLists.txt  main.cpp
dpcpp/03/02/: CMakeLists.txt  main.cpp
dpcpp/03/03/: CMakeLists.txt  main.cpp
dpcpp/04/02/: CMakeLists.txt  main.cpp
ini_parser/: CMakeLists.txt  main.cpp
ini_parser/Lib/: CMakeLists.txt  Utils.cpp  ini_parser.cpp
ini_parser/Lib/include/: LineIterator.h  Utils.h  ini_parser.h
ini_parser/res/: example.ini
map/01/map01_1/: CMakeLists.txt  main01_1.cpp
map/01/map01_2/: CMakeLists.txt  main01_2.cpp
map/02/map02_01/: CMakeLists.txt  main02_01.cpp
map/02/map02_02/: CMakeLists.txt  main02_02.cpp
map/02/map02_03/: CMakeLists.txt  main02_03.cpp
map/03/map03_01/: CMakeLists.txt  map03_01.cpp
map/03/map03_02/: CMakeLists.txt  map03_02.cpp
map/04/: CMakeLists.txt  map04_01.cpp  shape.cpp  shape.h
map/05/01/: Dockerfile
map/05/02/: Dockerfile
map/threadSafeQueue/: CMakeLists.txt  main.cpp  safe_queue.h  thread_pool.cpp  thread_pool.h
racing_simulator/: CMakeLists.txt  Camel.h  CamelSpeedster.cpp  CamelSpeedster.h  Eagle.cpp  LandVehicle.h  MagicCarpet.cpp  MagicCarpet.h  racing_simulator_client.cpp
racing_simulator/RacingSimulatorLib/: AirVehicle.cpp  AllTerrainBoots.cpp  Broom.cpp  CMakeLists.txt  Camel.cpp  Centaur.cpp  LandVehicle.cpp
racing_simulator/RacingSimulatorLib/include/: AirVehicle.h  AllTerrainBoots.h  Broom.h  Centaur.h  Eagle.h  Vehicle.h  VehicleFactory.h
sqlcpp-homeworks/05/: CMakeLists.txt  main.cpp
sqlcpp-homeworks/06/: CMakeLists.txt  main.cpp
(+185 files in other folders)
